--- a/home/templates/home/create_prescription.html
+++ b/home/templates/home/create_prescription.html
@@ -228,7 +228,7 @@
                             <i class="fas fa-info-circle mr-2"></i> Dispense items required for this prescription (e.g.
                             Syringes, Canulas).
                         </p>
-                        {% include 'inventory/partials/dispense_widget.html' %}
+                        {% include 'inventory/partials/dispense_widget.html' with patient=patient visit=visit %}
                     </div>
                 </div>
                 <!-- Medications Section -->
